testsuite/tests/module/mod81.hs
-- !!! Importing Tycon with bogus constructor
module M where
import Prelude(Either(Left,Right,Foo))

